--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="temp-container">
+      <div class="temp"></div>
+      <div class="feels-like"></div>
+      <div class="other-temps">
+        <div class="temp-min"></div>
+        <div class="temp-max"></div>
+      </div>
+    </div>
+  </body>
 </html>
