display weather api data

--- a/src/template.html
+++ b/src/template.html
@@ -14,5 +14,9 @@
         <div class="temp-max"></div>
       </div>
     </div>
+    <div class="uv"></div>
+    <div class="humidity"></div>
+    <div class="description"></div>
+    <div class="datetime"></div>
   </body>
 </html>
