add input box for custom location

--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,7 @@
   <body>
     <div class="temp-container">
       <div class="temp"></div>
+      <div class="description"></div>
       <div class="feels-like"></div>
       <div class="other-temps">
         <div class="temp-min"></div>
@@ -16,7 +17,11 @@
     </div>
     <div class="uv"></div>
     <div class="humidity"></div>
-    <div class="description"></div>
     <div class="datetime"></div>
+    <div class="input-container">
+      <input type="text" class="location-input" />
+      <button class="submit">Submit</button>
+    </div>
+    <div class="location"></div>
   </body>
 </html>
