api call now responds to custom location input

--- a/src/template.html
+++ b/src/template.html
@@ -22,6 +22,6 @@
       <input type="text" class="location-input" />
       <button class="submit">Submit</button>
     </div>
-    <div class="location"></div>
+    <div class="location">Enter a Location</div>
   </body>
 </html>
